# scylla-tui

./: .gitignore  LICENSE  README.md  data-scylla.nix  default.nix  pretty-relative-time.nix  scylla-api.conf  scylla-api.nix  scylla-tui.cabal  scylla-tui.nix
app/: Main.hs  TH.hs
app/UI/: Events.hs  Names.hs  Types.hs
app/UI/Views/: Build.hs  Builds.hs  Logs.hs  Main.hs  OrgBuilds.hs  Orgs.hs
app/UI/Widgets/: Build.hs  Builds.hs  Logs.hs  OrgBuilds.hs  Orgs.hs  _ItemEdit.hs
