name:                scylla-tui
version:             0.1.0.0
synopsis:            Example project
-- description:         Something a bit longer
homepage:            https://github.com/sorki/scylla-tui
license:             BSD3
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2018 Richard Marko
category:            Testing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.20

executable scylla-tui
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-extensions: OverloadedStrings TemplateHaskell TypeFamilies RecordWildCards DeriveGeneric
  build-depends:       base
                     , bytestring
                     , mtl
                     , time
                     , brick
                     , data-default
                     , async
                     , stm
                     , vty
                     , vector
                     , microlens
                     , microlens-th
                     , template-haskell
                     , text
                     , word-wrap
                     , split
                     , scylla
                     , scylla-api
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ci-realm/scylla-tui
